--- a/src/components/thank-you/Thankyou.scss
+++ b/src/components/thank-you/Thankyou.scss
@@ -1,30 +1,30 @@
 .pop-message {
+  font-family: Big Caslon;
+  letter-spacing: 0.02em;
+  font-size: 1.65rem;
+  font-style: italic;
+  padding: 14rem 3rem 0 3rem;
+}
+
+.katia {
+  font-weight: 500;
+  text-align: center;
+  font-size: 5rem;
+  // margin: 3rem 0 0px 5px;
+  font-family: Hopipolla;
+  // padding: 2rem;
+  z-index: 999;
+}
+
+@media screen and (min-width: 992px) {
+  .message-rsvp {
+    display: flex;
+  }
+  .pop-message {
     font-family: Big Caslon;
-    letter-spacing: .02em;
+    letter-spacing: 0.02em;
     font-size: 1.65rem;
     font-style: italic;
-    padding: 14rem 3rem 0 3rem;
+    margin: 100px auto;
   }
-
-  .katia {
-    font-weight: 500;
-    text-align: center;
-    font-size: 5rem;
-    margin: 3rem 0 0px 5px;
-    font-family: Hopipolla;
-    padding: 2rem;
-    z-index: 999;
-  }
-
-  @media screen and (min-width: 992px) {
-    .message-rsvp {
-      display: flex;
-    }
-    .pop-message {
-      font-family: Big Caslon;
-      letter-spacing: .02em;
-      font-size: 1.65rem;
-      font-style: italic;
-      margin: 100px auto;
-    }
-  }
+}
